--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.0",
+    "express-handlebars": "^6.0.5",
     "mongoose": "^6.3.2"
   }
 }
